encodebin: fix possible pad ref leak in error code path

https://bugzilla.gnome.org/show_bug.cgi?id=785065